--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   lottie: ^3.1.3
   intl: ^0.20.1
+  firebase_core: ^3.8.0
 
 dev_dependencies:
   flutter_test:
