--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   lottie: ^3.1.3
   intl: ^0.20.1
   firebase_core: ^3.8.0
+  firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
