--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
   shared_preferences: ^2.3.3
+  supabase_flutter: ^2.8.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +29,7 @@ flutter:
 
   assets:
     - assets/
+    - assets/lotties/
     
   fonts:
     - family: Roboto
