--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   shared_preferences: ^2.3.3
   supabase_flutter: ^2.8.1
   uuid: ^4.5.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
