--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,13 +12,15 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   lottie: ^3.1.3
   intl: ^0.20.1
-  firebase_core: ^3.8.0
-  firebase_auth: ^5.3.3
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
   google_sign_in: ^6.2.2
   shared_preferences: ^2.3.3
   supabase_flutter: ^2.8.1
   uuid: ^4.5.1
   provider: ^6.1.2
+  flutter_dotenv: ^5.2.1
+  cloud_firestore: ^5.5.1
 
 dev_dependencies:
   flutter_test:
@@ -31,6 +33,7 @@ flutter:
   assets:
     - assets/
     - assets/lotties/
+    - .env
     
   fonts:
     - family: Roboto
